--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 	<p>1.Перехватывать запросы</p>
 	<p>2.Отвечать на запросы</p>
+<!-- коментарий добавляю-->
 
 	Самый распространенный пример — запрос на доступ к домашней странице веб-сайта. Получив такой запрос сервер отправляет
 	в ответ на него HTML, CSS, JavaScript, изображения и другие файлы, связанные с этой страницей.
