--- a/задание4/index.html
+++ b/задание4/index.html
@@ -6,6 +6,7 @@
     <title>Планеты Солнечной системы</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -21,9 +22,8 @@
 
         <li>
             <h3>Меркурий</h3>
-            <p>
-                <img src="images/Mercury.jpg" alt="Меркурий">
-            </p>
+
+            <img src="images/Mercury.jpg" alt="Меркурий">
 
             <p>
                 <b>Меркурий</b> Ближайшая к Солнцу планета Солнечной системы, наименьшая из планет земной группы.
@@ -31,38 +31,64 @@
                 честь древнеримского бога торговли — быстрого Меркурия, поскольку она движется по небесной сфере
                 быстрее других планет.
             </p>
+
+            <div>
+
+            </div>
+
         </li>
         <li>
             <h3>Венера</h3>
-            <p>
-                <img src="images/Venus.jpg" alt="Венера">
-            </p>
+
+            <img src="images/Venus.jpg" alt="Венера">
+
 
             <p>
-                <b>Венера</b> Вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй и
-                Марсом принадлежит к семейству планет земной группы. Названа в честь древнеримской богини любви Венеры.
+                <b>Венера</b> Вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй
+                и
+                Марсом принадлежит к семейству планет земной группы. Названа в честь древнеримской богини любви
+                Венеры.
             </p>
+
+            <div>
+
+            </div>
+
         </li>
         <li>
             <h3>Земля</h3>
-            <p>
-                <img src="images/earth.jpg" alt="Земля">
-            </p>
+
+            <img src="images/earth.jpg" alt="Земля">
+
+
             <p>
                 <b>Земля</b> Третья по удалённости от Солнца планета Солнечной системы. Пятая по диаметру, массе и
                 плотности среди всех планет и крупнейшая среди планет земной группы.
             </p>
+
+            <div>
+
+            </div>
+
         </li>
         <li>
             <h3>Марс</h3>
+
+            <img src="images/Mars.jpg" alt="Марс">
+
+
             <p>
-                <img src="images/Mars.jpg" alt="Марс">
-            </p>
-            <p>
-                <b>Марс</b> является планетой земного типа, так как имеет тонкую атмосферу и поверхность, напоминающую
-                как кратеры Луны, так и пустыни, долины, вулканы и полярные льды Земли. На планете Марс обнаружен самый
+                <b>Марс</b> является планетой земного типа, так как имеет тонкую атмосферу и поверхность,
+                напоминающую
+                как кратеры Луны, так и пустыни, долины, вулканы и полярные льды Земли. На планете Марс обнаружен
+                самый
                 высокий вулкан Солнечной системы.
             </p>
+
+            <div>
+
+            </div>
+
         </li>
     </ul>
 
