--- a/задание4/index.html
+++ b/задание4/index.html
@@ -18,82 +18,72 @@
     </ol>
 
     <h2 id="planet">Список планет</h2>
-    <ul>
-
-        <li>
-            <h3>Меркурий</h3>
-
-            <img src="images/Mercury.jpg" alt="Меркурий">
-
-            <p>
-                <b>Меркурий</b> Ближайшая к Солнцу планета Солнечной системы, наименьшая из планет земной группы.
-                Названа в
-                честь древнеримского бога торговли — быстрого Меркурия, поскольку она движется по небесной сфере
-                быстрее других планет.
-            </p>
-
-            <div>
-
-            </div>
-
-        </li>
-        <li>
-            <h3>Венера</h3>
-
-            <img src="images/Venus.jpg" alt="Венера">
 
 
-            <p>
-                <b>Венера</b> Вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй
-                и
-                Марсом принадлежит к семейству планет земной группы. Названа в честь древнеримской богини любви
-                Венеры.
-            </p>
+    <div style="background-color: lightblue">
+    
+        <h3>Меркурий</h3>
+        
+        <img src="images/Mercury.jpg" alt="Меркурий">
 
-            <div>
+        <p>
+            <b>Меркурий</b> Ближайшая к Солнцу планета Солнечной системы, наименьшая из планет земной группы.
+            Названа в
+            честь древнеримского бога торговли — быстрого Меркурия, поскольку она движется по небесной сфере
+            быстрее других планет.
+        </p>
 
-            </div>
+    </div>
 
-        </li>
-        <li>
-            <h3>Земля</h3>
+    <div style="background: linear-gradient(45deg, #55ddff, #0081b5)">
+        <h3>Венера</h3>
 
-            <img src="images/earth.jpg" alt="Земля">
+        <img src="images/Venus.jpg" alt="Венера">
 
 
-            <p>
-                <b>Земля</b> Третья по удалённости от Солнца планета Солнечной системы. Пятая по диаметру, массе и
-                плотности среди всех планет и крупнейшая среди планет земной группы.
-            </p>
+        <p>
+            <b>Венера</b> Вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй
+            и
+            Марсом принадлежит к семейству планет земной группы. Названа в честь древнеримской богини любви
+            Венеры.
+        </p>
 
-            <div>
+    </div>
 
-            </div>
+    <div style="background: radial-gradient(circle, #a6c74a, #0081b5)">
+        <h3>Земля</h3>
 
-        </li>
-        <li>
-            <h3>Марс</h3>
+        <img src="images/earth.jpg" alt="Земля">
 
+
+        <p>
+            <b>Земля</b> Третья по удалённости от Солнца планета Солнечной системы. Пятая по диаметру, массе и
+            плотности среди всех планет и крупнейшая среди планет земной группы.
+        </p>
+
+    </div>
+
+    <div style="color: rgb(255, 255, 255); background-image: url(images/background-image.jpg); background-size: cover">
+        <h3>Марс</h3>
+
+        <div style="opacity: 0.5">
             <img src="images/Mars.jpg" alt="Марс">
+        </div>
 
 
-            <p>
-                <b>Марс</b> является планетой земного типа, так как имеет тонкую атмосферу и поверхность,
-                напоминающую
-                как кратеры Луны, так и пустыни, долины, вулканы и полярные льды Земли. На планете Марс обнаружен
-                самый
-                высокий вулкан Солнечной системы.
-            </p>
+        <p>
+            <b>Марс</b> является планетой земного типа, так как имеет тонкую атмосферу и поверхность,
+            напоминающую
+            как кратеры Луны, так и пустыни, долины, вулканы и полярные льды Земли. На планете Марс обнаружен
+            самый
+            высокий вулкан Солнечной системы.
+        </p>
 
-            <div>
-
-            </div>
-
-        </li>
+    </div>
     </ul>
 
     <h2 id="table">Сравнительная таблица</h2>
-    <table>
+    <table cellpadding="4">
         <tr>
             <th>Планета</th>
             <th>Размер</th>
@@ -125,7 +115,7 @@
             <td></td>
         </tr>
         <tr>
-            <td colspan="5" style="text-align:left">Вот так</td>
+            <td colspan="5">Вот так</td>
         </tr>
 
     </table>
