добавил свойство background-attachment для фиксации фона

--- a/задание4/index.html
+++ b/задание4/index.html
@@ -19,11 +19,10 @@
 
     <h2 id="planet">Список планет</h2>
 
-
     <div style="background-color: lightblue">
-    
+
         <h3>Меркурий</h3>
-        
+
         <img src="images/Mercury.jpg" alt="Меркурий">
 
         <p>
@@ -40,7 +39,6 @@
 
         <img src="images/Venus.jpg" alt="Венера">
 
-
         <p>
             <b>Венера</b> Вторая по удалённости от Солнца планета Солнечной системы, наряду с Меркурием, Землёй
             и
@@ -55,7 +53,6 @@
 
         <img src="images/earth.jpg" alt="Земля">
 
-
         <p>
             <b>Земля</b> Третья по удалённости от Солнца планета Солнечной системы. Пятая по диаметру, массе и
             плотности среди всех планет и крупнейшая среди планет земной группы.
@@ -63,13 +60,12 @@
 
     </div>
 
-    <div style="color: rgb(255, 255, 255); background-image: url(images/background-image.jpg); background-size: cover">
+    <div style="color: rgb(255, 255, 255); background-image: url(images/background-image.jpg); background-attachment: local; background-size: cover">
         <h3>Марс</h3>
 
         <div style="opacity: 0.5">
             <img src="images/Mars.jpg" alt="Марс">
         </div>
-
 
         <p>
             <b>Марс</b> является планетой земного типа, так как имеет тонкую атмосферу и поверхность,
@@ -80,7 +76,6 @@
         </p>
 
     </div>
-    </ul>
 
     <h2 id="table">Сравнительная таблица</h2>
     <table cellpadding="4">
