Убрал отступ 5px между пунктами меню. По умолчанию выделил первый пункт меню. Заголовки страниц через h2 вместо span. Полностью избавился от теговых селекторов. Удалил лишний класс. Центровка блока с контентом.

--- a/занятие7/index.html
+++ b/занятие7/index.html
@@ -10,105 +10,125 @@
 
 <body>
     <div class="block-one page" id="page-main">
-       
+
         <ul class="menu">
             <li>
-                <a class="menu-link" href="#page-main"> главная</a>
+                <a href="#page-main"> главная</a>
             </li>
 
             <li>
-                <a class="menu-link" href="#page1">первая</a>
+                <a href="#page1">первая</a>
             </li>
 
             <li>
-                <a class="menu-link" href="#page2">вторая</a>
+                <a href="#page2">вторая</a>
             </li>
         </ul>
 
-        <span class="title-one title">Добро пожаловать!</span>
+        <div class="centr">
+            <h2 class="title-one title">
+                Добро пожаловать!
 
-        <p>
-            Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Напоивший, языком все
-            рыбного свою встретил до буквенных на берегу продолжил пор. Пор, свою текста последний текстами буквенных
-            имени инициал если буквоград букв, маленькая заголовок живет подпоясал, предупредила силуэт
-            парадигматическая. Ipsum эта, пояс, однажды несколько дороге океана решила, заголовок взобравшись
-            реторический точках прямо возвращайся рот безорфографичный снова запятой переписывается рукописи одна.
-        </p>
+            </h2>
 
-        <a class="link-one link" href="#page1">Далее</a>
+            <p class="text">
+                Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Напоивший, языком
+                все
+                рыбного свою встретил до буквенных на берегу продолжил пор. Пор, свою текста последний текстами
+                буквенных
+                имени инициал если буквоград букв, маленькая заголовок живет подпоясал, предупредила силуэт
+                парадигматическая. Ipsum эта, пояс, однажды несколько дороге океана решила, заголовок взобравшись
+                реторический точках прямо возвращайся рот безорфографичный снова запятой переписывается рукописи одна.
+            </p>
+
+            <a class="link-one link" href="#page1">Далее</a>
+
+        </div>
+
 
     </div>
 
     <div class="block-two page" id="page1">
 
-        <span class="title-two title">Страница первая</span>
+        <div class="centr">
+            <h2 class="title-two title">
+                Страница первая
+            </h2>
 
-        <p>
-            Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Меня даже щеке все
-            переписали путь! Вершину что необходимыми безорфографичный не путь букв наш эта назад, встретил образ даль
-            родного великий. Выйти залетают семь это, которой страна своих злых семантика, буквоград маленькая
-            подзаголовок языком осталось силуэт моей последний своего на берегу одна океана которое грустный
-            обеспечивает большой заманивший свою журчит текстов! Ручеек путь родного большой скатился подпоясал свой
-            речью рукопись послушавшись?
-        </p>
+            <p class="text">
+                Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Меня даже щеке
+                все
+                переписали путь! Вершину что необходимыми безорфографичный не путь букв наш эта назад, встретил образ
+                даль
+                родного великий. Выйти залетают семь это, которой страна своих злых семантика, буквоград маленькая
+                подзаголовок языком осталось силуэт моей последний своего на берегу одна океана которое грустный
+                обеспечивает большой заманивший свою журчит текстов! Ручеек путь родного большой скатился подпоясал
+                свой
+                речью рукопись послушавшись?
+            </p>
 
-        <table class="tabl">
+            <table class="tabl">
 
-            <tr>
-                <th class="cell">
-                    papa
-                </th>
+                <tr>
+                    <th class="cell">
+                        papa
+                    </th>
 
-                <th class="cell">
-                    mama
-                </th>
+                    <th class="cell">
+                        mama
+                    </th>
 
-                <th class="cell">
-                    ja
-                </th>
+                    <th class="cell">
+                        ja
+                    </th>
 
-            </tr>
+                </tr>
 
-            <tr>
-                <td class="cell">
-                    sport
-                </td>
+                <tr>
+                    <td class="cell">
+                        sport
+                    </td>
 
-                <td class="cell">
-                    semia
-                </td>
+                    <td class="cell">
+                        semia
+                    </td>
 
-                <td class="cell">
-                    sestra
-                </td>
+                    <td class="cell">
+                        sestra
+                    </td>
 
-            </tr>
+                </tr>
 
-            <tr>
-                <td class="cell">
-                    brat
-                </td>
+                <tr>
+                    <td class="cell">
+                        brat
+                    </td>
 
-                <td class="cell">
-                    sin
-                </td>
+                    <td class="cell">
+                        sin
+                    </td>
 
-                <td class="cell">
-                    doch
-                </td>
+                    <td class="cell">
+                        doch
+                    </td>
 
-            </tr>
+                </tr>
 
-        </table>
+            </table>
 
-        <a class="link-two link " href="#page-main">Назад</a>
-        <a class="link-two link" href="#page2">Далее</a>
+            <a class="link-two link " href="#page-main">Назад</a>
+            <a class="link-two link" href="#page2">Далее</a>
+
+        </div>
 
     </div>
 
     <div class="block-three page" id="page2">
 
-        <span class="title-three title">Страница вторая</span>
+        <h2 class="title-three title">
+            Страница вторая
+        </h2>
+
         <img class="pic-master" src="images/master.png" alt="Master">
         <a class="link-three link" href="#page1">Назад</a>
         <a class="link-three link" href="#page-main">В начало</a>
