Доделал выпадающее меню в задании11.

--- a/задание11/index.html
+++ b/задание11/index.html
@@ -9,11 +9,31 @@
 
 <body>
     <div class="menu">
-        <ul>
+        <ul class="ul1">
             <li><a href="#header">Главная</a></li>
-            <li><a href="#block1">Блок 1</a></li>
+
+            <li>
+                <a href="#block1">Блок 1</a>
+                <ul class="ul2level">
+
+                    <li><a href="block1.1">Блок 1.1</a>
+                        <ul class="ul3level">
+                            <li><a href="block1.1.1">Блок 1.1.1</a></li>
+                            <li><a href="block1.1.2">Блок 1.1.2</a></li>
+
+                        </ul>
+
+                    </li>
+
+                    <li><a href="block1.2">Блок 1.2</a></li>
+
+                </ul>
+            </li>
+
             <li><a href="#block2">Блок 2</a></li>
+
             <li><a href="#block3">Блок 3</a></li>
+
         </ul>
     </div>
 
@@ -61,7 +81,7 @@
 
             <div class="table2">
 
-                <ul class="table2Resize">
+                <ul>
 
                     <div class="t1">
 
@@ -117,8 +137,8 @@
         <div class="content">
 
             <h2>Название третьего блока</h2>
-            
-            <img class="imgPage3" src="images/image3.jpg" alt="Картинка">
+
+            <img id="block1.1" class="imgPage3" src="images/image3.jpg" alt="Картинка">
 
             <p class="page3Text">
                 Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Запятых рыбного
