Задание 14-Маска для главной страницы. Задание 15- семантика.

--- a/задание 13/Untitled-1.html
+++ b/задание 13/Untitled-1.html
@@ -26,13 +26,14 @@
 
         .it3 {
             max-width: 86px;
-
+            
         }
 
         .it1,
         .it2,
         .it4 {
             align-self: center;
+            flex-grow: 2;
         }
     </style>
 
