Поля данных для Форм .

--- a/Задание 15/index.html
+++ b/Задание 15/index.html
@@ -13,9 +13,9 @@
     
 </head>
 
-<main>
+<body>
 
-    <body>
+    <main>
         <nav>
             <div class="menu">
                 <ul>
@@ -23,6 +23,8 @@
                     <li><a href="#block1">Блок 1</a></li>
                     <li><a href="#block2">Блок 2</a></li>
                     <li><a href="#block3">Блок 3</a></li>
+                    <li><a href="index2.html">Cтраница 2</a></li>
+
                     
                 </ul>
             </div>
@@ -198,8 +200,8 @@
             </div>
         </footer>
 
-    </body>
+    </main>
 
-</main>
+</body>
 
 </html>
